changed image new one

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/ceo.png" />
+                            <img src="./images/1 NEW.png" />
                         </div>
                     </div>
                 </div>
@@ -285,8 +285,10 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
-                        <div class="img_section Mascot_img" style="margin: auto;">
-
+                        <!-- <div class="img_section" style="margin: auto;">
+                        </div> -->
+                        <div class="img_section" style="margin: auto;">
+                                <img src="./images/2 NEW.png" />
                         </div>
                     </div>
                 </div>
