changed image new one mobile responsive images

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="row">
                     <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 logo_area">
                         <a href="#" class="logo">
-                            <img src="./images/logo_crayond.png" />
+                            <img src="./images/logo-crayond@2x.jpg" />
                         </a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-8 col-lg-8 col-xl-8 header_menu">
@@ -127,7 +127,7 @@
             </div>
             <div class="card_div">
                 <div class="row">
-                    <div data-aos="zoom-in" class="col-md-4 card-div">
+                    <div data-aos="zoom-in" class="col-md-4 card-div card_idea">
                         <div class="card--">
                             <div class="card--body">
                                 <span class="fa_icons Oval_idea">
@@ -193,10 +193,10 @@
                 </div>
             </div>
             <div class="container">
-                <div class="row">
+                <div class="row" style="padding-top: 6%;">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="fa_icon" style="background-color: #334ac0;">
+                            <div class="fa_icon" style="background-color: #002ee5;">
                                 <img src="./images/monitor.svg" />
                             </div>
                         </div>
@@ -265,7 +265,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="fa_icon" style="background-color: #E39719;">
+                            <div class="fa_icon" style="background-color: #ff2695;">
                                 <img src="./images/startup.svg" />
                             </div>
                         </div>
@@ -299,12 +299,12 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/ceo.png" />
+                            <img src="./images/1 NEW.png" />
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="fa_icon" style="background-color: #ED3593;">
+                            <div class="fa_icon" style="background-color: #00d890;">
                                 <img src="./images/group-6.svg" />
                             </div>
                         </div>
@@ -325,7 +325,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/ceo.png" />
+                            <img src="./images/1 NEW.png" />
                         </div>
                     </div>
                 </div>
@@ -352,7 +352,7 @@
                         <div class="card__body">
                             <!-- <i class="fa fa_icon fa-archive" aria-hidden="true"></i> -->
                             <span class="fa_icon Oval_code">
-                                <img src="./images/code.png" />
+                                <img src="./images/code.svg" />
                             </span>
                             <p class="card-title fontGraphikSemibold">Clean Code</p>
                             <p class="card-text fontLatoRegular">
@@ -495,51 +495,51 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 logo_address">
-                    <img src="./images/logo_crayond.png" width="115px" />
-                    <p>© Crayon Digital Reach Pvt. Ltd.</p>
-                    <p>All rights reserved</p>
+                    <img src="./images/logo-crayond@2x.jpg" width="115px" />
+                    <p class="fontGraphikRegular">© Crayon Digital Reach Pvt. Ltd.</p>
+                    <p class="fontGraphikRegular">All rights reserved</p>
                 </div>
-                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
                     <p class="fontGraphikSemibold footer_menu">
                         Company
                     </p>
-                    <ul>
+                    <!-- <ul>
                         <li><span class="fontLatoRegular">Who we are?</span></li>
                         <li><span class="fontLatoRegular">Pricing</span></li>
                         <li><span class="fontLatoRegular">Careers</span></li>
                         <li><span class="fontLatoRegular">Contact</span></li>
-                    </ul>
+                    </ul> -->
                 </div>
-                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
                     <p class="fontGraphikSemibold  footer_menu">
                         Solutions
                     </p>
-                    <ul>
+                    <!-- <ul>
                         <li><span class="fontLatoRegular">Entrepreneur</span></li>
                         <li><span class="fontLatoRegular">Startup Owner</span></li>
                         <li><span class="fontLatoRegular">Enterprise</span></li>
                         <li><span class="fontLatoRegular">SaaS</span></li>
-                    </ul>
+                    </ul> -->
                 </div>
-                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
                     <p class="fontGraphikSemibold footer_menu">
                         Resources
                     </p>
-                    <ul>
+                    <!-- <ul>
                         <li><span class="fontLatoRegular">Blog</span></li>
                         <li><span class="fontLatoRegular">Case Studies</span></li>
                         <li><span class="fontLatoRegular">FAQ</span></li>
-                    </ul>
+                    </ul> -->
                 </div>
-                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
                     <p class="fontGraphikSemibold footer_menu">
                         Products
                     </p>
-                    <ul>
+                    <!-- <ul>
                         <li><span class="fontLatoRegular">User Story Writer</span></li>
                         <li><span class="fontLatoRegular">Mapper</span></li>
                         <li><span class="fontLatoRegular">Builder</span></li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </div>
@@ -550,13 +550,13 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 tp" style="display: flex;">
+                    <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 tp" style="display: flex;">
                         <p class="fontLatoBold footer_list"><span>Security</span></p>
                         <p class="fontLatoBold footer_list"><span>Terms & Policies</span></p>
                         <p class="fontLatoBold footer_list"><span>GDPR</span></p>
-                    </div>
-                    <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 social_icon_link"
-                        style="display: flex;justify-content: flex-end;">
+                    </div> -->
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link"
+                        style="display: flex;justify-content: flex-start;">
                         <samp class="social_icon">
                             <i class="fa fa-linkedin " aria-hidden="true"></i>
                         </samp>
@@ -570,6 +570,16 @@
                             <i class="fa fa-twitter " aria-hidden="true"></i>
                         </samp>
                     </div>
+                    <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 footer_address">
+                        <p class="fontGraphikRegular">hello@crayond.com</p>
+                    </div>
+                    <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 footer_address">
+                            <p class="fontGraphikRegular">+(91) 74483 90100</p>
+                    </div>
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-3 col-lg-3 col-xl-3 footer_address" >
+                            <p class="fontGraphikRegular" style="border: none; margin-top: 19px;margin-bottom: 10px;" > 105, South West Boag Road, T.Nagar<br/>Chennai, India</p>
+                    </div>
+
                 </div>
             </div>
         </footer>
