--- a/index.html
+++ b/index.html
@@ -570,14 +570,14 @@
                             <i class="fa fa-twitter " aria-hidden="true"></i>
                         </samp>
                     </div>
-                    <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 footer_address">
+                    <div class="col-6 col-xs-6 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
                         <p class="fontGraphikRegular">hello@crayond.com</p>
                     </div>
-                    <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 footer_address">
+                    <div class="col-6 col-xs-6 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
                             <p class="fontGraphikRegular">+(91) 74483 90100</p>
                     </div>
-                    <div class="col-12 col-xs-12 col-ms-12 col-md-3 col-lg-3 col-xl-3 footer_address" >
-                            <p class="fontGraphikRegular" style="border: none; margin-top: 19px;margin-bottom: 10px;" > 105, South West Boag Road, T.Nagar<br/>Chennai, India</p>
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-3 col-xl-3 footer_address" >
+                            <p class="fontGraphikRegular" style="border: none; margin-top: 19px;margin-bottom: 10px;" > 105, South West Boag Road, T.Nagar Chennai, India</p>
                     </div>
 
                 </div>
