changed tap titel and footer

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <img class="brands_logos img4" src="./images/pyt-logo.svg" style="width: 160px">
                     <img class="brands_logos img5" src="./images/Pinecrow.svg" style="width: 140px;">
                 </div>   
-                <marquee behavior="scroll" direction="left" style="display: none;">
+                <marquee behavior="scroll" direction="left" scrollamount="3" style="display: none;">
                     <img class="brands_logos" src="./images/Benz.svg" style="width: 150px">
                     <img class="brands_logos" src="./images/Emtax.svg" style="width: 124px;">
                     <img class="brands_logos" src="./images/Zibahub.svg" style="width: 80px;">
@@ -570,14 +570,29 @@
                             <i class="fa fa-twitter " aria-hidden="true"></i>
                         </samp>
                     </div>
-                    <div class="col-6 col-xs-6 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
+                    <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
                         <p class="fontGraphikRegular">hello@crayond.com</p>
                     </div>
-                    <div class="col-6 col-xs-6 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
+                    <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
                             <p class="fontGraphikRegular">+(91) 74483 90100</p>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-3 col-xl-3 footer_address" >
                             <p class="fontGraphikRegular" style="border: none; margin-top: 19px;margin-bottom: 10px;" > 105, South West Boag Road, T.Nagar Chennai, India</p>
+                    </div>
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
+                        style="display: flex;justify-content: flex-start; display: none;">
+                        <samp class="social_icon">
+                            <i class="fa fa-linkedin " aria-hidden="true"></i>
+                        </samp>
+                        <samp class="social_icon">
+                            <i class="fa fa-facebook " aria-hidden="true"></i>
+                        </samp>
+                        <samp class="social_icon">
+                            <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                        </samp>
+                        <samp class="social_icon">
+                            <i class="fa fa-twitter " aria-hidden="true"></i>
+                        </samp>
                     </div>
 
                 </div>
