--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     </div>
     <!-- end -->
     <!-- background video -->
-    <section class="first_section video_player" >
+    <section class="first_section video_player" style="height: auto;" >
         <div class="container-fluid" style="padding: 0px;">
-            <video autoplay loop style="max-width: 100%;height:100%;">
+            <video autoplay loop >
                 <source src="http://videos.ctfassets.net/xny2w179f4ki/624R5hsLvnQ36lRNjssvOB/5e49f2cc809333610c32f8b941761ce2/Homepage_Airplane_Guy_Working_1.mp4" type="video/mp4">
                     <!-- <source src="https://open-for-fs.s3.ap-south-1.amazonaws.com/test.mp4" type="video/mp4"> -->
             </video>
