--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                         </a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-8 col-lg-8 col-xl-8 header_menu">
-                        <span class="active"><a class="fontLatoRegular" href="/">Who we are?</a></span>
+                        <span class="activee"><a class="fontLatoRegular" href="/">Who we are?</a></span>
                         <span><a class="fontLatoRegular" href="/">Products</a></span>
                         <span><a class="fontLatoRegular" href="/">Pricing</a></span>
                         <span><a class="fontLatoRegular" href="/">Blogs</a></span>
-                        <span><a class="fontLatoRegular" href="careers.html">Careers</a> </span>
+                        <span><a class="fontLatoRegular" href="opportunities.html">Careers</a> </span>
                         <span><a class="fontLatoRegular" href="/">Contact</a></span>
                     </div>
                     <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 sign_btn">
@@ -62,7 +62,7 @@
     </div>
     <!-- end -->
     <!-- background video -->
-    <section class="first_section video_player" style="height: auto;" >
+    <section class="first_section video_player" >
         <div class="container-fluid" style="padding: 0px;">
             <video autoplay loop >
                 <source src="http://videos.ctfassets.net/xny2w179f4ki/624R5hsLvnQ36lRNjssvOB/5e49f2cc809333610c32f8b941761ce2/Homepage_Airplane_Guy_Working_1.mp4" type="video/mp4">
@@ -73,7 +73,7 @@
     <!-- end -->
     <!-- main title -->
     <section class="first_section header_text">
-        <div class="container">
+        <div class="container" style="margin: auto;">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner_text_1 fontGraphikBold">
                 <p style="margin-bottom: 0;">Bring your <br /> Product Idea to Life</p>
             </div>
