--- a/opportunities.html
+++ b/opportunities.html
@@ -18,8 +18,10 @@
   <link rel="stylesheet" type="text/css" href="./css/styles.css">
   <!-- scss loader -->
   <!-- 4.0.0 bootstrap -->
-  <link rel="stylesheet" href="./plugin/4.0.0_bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="./plugin/4.0.0_bootstrap.min.css"> -->
   <link rel="stylesheet" href="styles/styles.css">
+
+  <!-- <link href="./plugin/aos.css" rel="stylesheet"> -->
 
 
 
@@ -39,11 +41,11 @@
                       </a>
                   </div>
                   <div class="col-12 col-xs-12 col-ms-12 col-md-8 col-lg-8 col-xl-8 header_menu">
-                      <span class="active"><a class="fontLatoRegular" href="/">Who we are?</a></span>
+                      <span class=""><a class="fontLatoRegular" href="/">Who we are?</a></span>
                       <span><a class="fontLatoRegular" href="/">Products</a></span>
                       <span><a class="fontLatoRegular" href="/">Pricing</a></span>
                       <span><a class="fontLatoRegular" href="/">Blogs</a></span>
-                      <span><a class="fontLatoRegular" href="careers.html">Careers</a> </span>
+                      <span class="active"><a class="fontLatoRegular" href="opportunities.html">Careers</a> </span>
                       <span><a class="fontLatoRegular" href="/">Contact</a></span>
                   </div>
                   <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 sign_btn">
@@ -55,8 +57,8 @@
   </div>
   <!-- end -->
  <div class="col-md-12 col-xs-12 col-sm-12 title">
-    <h1 style="color: #fff;font-size: 42px;text-shadow: 1.5px 4px 1.5px #00000087;">The best way to predict the future is to create it.</h1>
-    <button type="button" style="outline: none;color: #fff;font-size: 17px;" onclick="window.location.href = 'https://angel.co/thecrayond';"  class="btn btn-alt explore">Join Us</button>
+    <!-- <h1 style="color: #fff;font-size: 42px;text-shadow: 1.5px 4px 1.5px #00000087;">The best way to predict the future is to create it.</h1> -->
+    <!-- <button type="button" style="outline: none;color: #fff;font-size: 17px;" onclick="window.location.href = 'https://angel.co/thecrayond';"  class="btn btn-alt explore">Join Us</button> -->
   </div>
   <div class="hero-wrapper">
   <div class="hero">
@@ -383,12 +385,147 @@
 </div>  
 </section>
 <!-- Start Section -->
-  
+<!-- next_billion -->
+<section class="next_billion">
+    <img data-aos="zoom-out-left" data-aos-duration="3000" src="./images/oval.png" class="ovel" />
+    <img data-aos="zoom-out-left" data-aos-duration="5000" src="./images/oval-copy-6.png" class="ovel-6" />
+    <div class="container billion">
+        <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
+            <button class="button fontLatoRegular">Let's get serious &nbsp <span> </span></button>
+        </div>
+        <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="text-align: center;">
+            <h1 class="fontGraphikSemibold">What’s your next billion-<br />dollar idea?</h1>
+        </div>
+        <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 button_div">
+            <button class="banner_button fontLatoBlack">
+                <span> 
+                        SCREW IT, LET'S DO IT! &nbsp
+                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </span></button>
+        </div>
+    </div>
+    <img data-aos="zoom-in-up" data-aos-duration="5000" src="./images/path-3-copy.png" class="path-3" />
+    <img data-aos="zoom-out-right" data-aos-duration="3000" src="./images/path-3.png" class="path" />
+</section>
+<!-- end -->
+  <!-- main footer -->
+  <section class="footer">
+      <div class="container">
+          <div class="row">
+              <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 logo_address">
+                  <img src="./images/logo-crayond@2x.jpg" width="115px" />
+                  <p class="fontGraphikRegular">© Crayon Digital Reach Pvt. Ltd.</p>
+                  <p class="fontGraphikRegular">All rights reserved</p>
+              </div>
+              <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
+                  <p class="fontLatoBold footer_menu">
+                      Company
+                  </p>
+                  <!-- <ul>
+                      <li><span class="fontLatoRegular">Who we are?</span></li>
+                      <li><span class="fontLatoRegular">Pricing</span></li>
+                      <li><span class="fontLatoRegular">Careers</span></li>
+                      <li><span class="fontLatoRegular">Contact</span></li>
+                  </ul> -->
+              </div>
+              <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
+                  <p class="fontLatoBold  footer_menu">
+                      Solutions
+                  </p>
+                  <!-- <ul>
+                      <li><span class="fontLatoRegular">Entrepreneur</span></li>
+                      <li><span class="fontLatoRegular">Startup Owner</span></li>
+                      <li><span class="fontLatoRegular">Enterprise</span></li>
+                      <li><span class="fontLatoRegular">SaaS</span></li>
+                  </ul> -->
+              </div>
+              <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
+                  <p class="fontLatoBold footer_menu">
+                      Resources
+                  </p>
+                  <!-- <ul>
+                      <li><span class="fontLatoRegular">Blog</span></li>
+                      <li><span class="fontLatoRegular">Case Studies</span></li>
+                      <li><span class="fontLatoRegular">FAQ</span></li>
+                  </ul> -->
+              </div>
+              <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
+                  <p class="fontLatoBold footer_menu">
+                      Products
+                  </p>
+                  <!-- <ul>
+                      <li><span class="fontLatoRegular">User Story Writer</span></li>
+                      <li><span class="fontLatoRegular">Mapper</span></li>
+                      <li><span class="fontLatoRegular">Builder</span></li>
+                  </ul> -->
+              </div>
+          </div>
+      </div>
+  </section>
+  <!-- end -->
+  <!-- footer_social_media -->
+  <section class="footer_social_media">
+      <footer>
+          <div class="container">
+              <div class="row">
+                  <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 tp" style="display: flex;">
+                      <p class="fontLatoBold footer_list"><span>Security</span></p>
+                      <p class="fontLatoBold footer_list"><span>Terms & Policies</span></p>
+                      <p class="fontLatoBold footer_list"><span>GDPR</span></p>
+                  </div> -->
+                  <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link"
+                      style="display: flex;justify-content: flex-start;">
+                      <samp class="social_icon">
+                          <i class="fa fa-linkedin " aria-hidden="true"></i>
+                      </samp>
+                      <samp class="social_icon">
+                          <i class="fa fa-facebook " aria-hidden="true"></i>
+                      </samp>
+                      <samp class="social_icon">
+                          <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                      </samp>
+                      <samp class="social_icon">
+                          <i class="fa fa-twitter " aria-hidden="true"></i>
+                      </samp>
+                  </div>
+                  <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
+                      <p class="fontGraphikRegular">hello@crayond.com</p>
+                  </div>
+                  <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
+                          <p class="fontGraphikRegular">+(91) 74483 90100</p>
+                  </div>
+                  <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-3 col-xl-3 footer_address" >
+                          <p class="fontGraphikRegular" style="border: none; margin-top: 19px;margin-bottom: 10px;" > 105, South West Boag Road, T.Nagar Chennai, India</p>
+                  </div>
+                  <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
+                      style="display: flex;justify-content: flex-start; display: none;">
+                      <samp class="social_icon">
+                          <i class="fa fa-linkedin " aria-hidden="true"></i>
+                      </samp>
+                      <samp class="social_icon">
+                          <i class="fa fa-facebook " aria-hidden="true"></i>
+                      </samp>
+                      <samp class="social_icon">
+                          <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                      </samp>
+                      <samp class="social_icon">
+                          <i class="fa fa-twitter " aria-hidden="true"></i>
+                      </samp>
+                  </div>
+
+              </div>
+          </div>
+      </footer>
+  </section>
+  <!-- end -->
   <!-- End Section --> 
   <!-- Bootstrap script -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script src="./plugin/aos.js"></script>
+
   <script type="text/javascript">
+    AOS.init();
     $(document).ready(function(){ 
     var video = $("#video_hight").height();
     // $(".stretch").css("margin-top" , video + "50px")
