--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     <section class="first_section video_player" >
         <div class="container-fluid" style="padding: 0px;">
             <video autoplay loop >
-                <source src="http://videos.ctfassets.net/xny2w179f4ki/624R5hsLvnQ36lRNjssvOB/5e49f2cc809333610c32f8b941761ce2/Homepage_Airplane_Guy_Working_1.mp4" type="video/mp4">
-                    <!-- <source src="https://open-for-fs.s3.ap-south-1.amazonaws.com/test.mp4" type="video/mp4"> -->
+                <!-- <source src="http://videos.ctfassets.net/xny2w179f4ki/624R5hsLvnQ36lRNjssvOB/5e49f2cc809333610c32f8b941761ce2/Homepage_Airplane_Guy_Working_1.mp4" type="video/mp4"> -->
+                <source src="./assets/vidoes/Website Animation final.mp4" type="video/mp4">
             </video>
         </div>
     </section>
@@ -221,7 +221,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="img_section " style="margin: auto;">
-                            <img src="./images/commen_pic.png" />
+                            <img src="./images/(A)-Products-Customer-Love.png" />
                         </div>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/1 NEW.png" />
+                            <img src="./images/(B)-Modern-Engineering.png" />
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
@@ -258,7 +258,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/1 NEW.png" />
+                            <img src="./images/(B)-Modern-Engineering.png" />
                         </div>
                     </div>
                 </div>
@@ -292,7 +292,7 @@
                         <!-- <div class="img_section" style="margin: auto;">
                         </div> -->
                         <div class="img_section" style="margin: auto;">
-                                <img src="./images/2 NEW.png" />
+                                <img src="./images/(C)-Early-Launch.png" />
                         </div>
                     </div>
                 </div>
@@ -303,7 +303,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/1 NEW.png" />
+                            <img src="./images/(D)-Our-Pricing.png" />
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
@@ -329,7 +329,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/1 NEW.png" />
+                            <img src="./images/(D)-Our-Pricing.png" />
                         </div>
                     </div>
                 </div>
