--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="img_section " style="margin: auto;">
-                            <img src="./images/(A)-Products-Customer-Love.png" />
+                            <img src="./images/(A)-Products-Customers-Love.svg" />
                         </div>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/(B)-Modern-Engineering.png" />
+                            <img src="./images/(B)-Modern-Engineering.svg" />
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
@@ -258,7 +258,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/(B)-Modern-Engineering.png" />
+                            <img src="./images/(B)-Modern-Engineering.svg" />
                         </div>
                     </div>
                 </div>
@@ -292,7 +292,7 @@
                         <!-- <div class="img_section" style="margin: auto;">
                         </div> -->
                         <div class="img_section" style="margin: auto;">
-                                <img src="./images/(C)-Early-Launch.png" />
+                                <img src="./images/(C)-Launch-Early.svg" />
                         </div>
                     </div>
                 </div>
@@ -303,7 +303,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/(D)-Our-Pricing.png" />
+                            <img src="./images/(D)-Pricing.svg" />
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
@@ -329,7 +329,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/(D)-Our-Pricing.png" />
+                            <img src="./images/(D)-Pricing.svg" />
                         </div>
                     </div>
                 </div>
