--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
                 <div class="row">
                     <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 logo_area">
-                        <a href="/" class="logo">
-                            <img src="./images/logo-crayond@2x.jpg" />
-                        </a>
+                        <a href="/" class="logo"><img src="./images/logo-crayond@2x.jpg" /></a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-8 col-lg-8 col-xl-8 header_menu">
                         <span class="activee"><a class="fontLatoRegular" href="/">Who we are?</a></span>
