change in the image tag

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
                 <div class="row">
                     <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 logo_area">
-                        <a href="/" class="logo"><img src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
+                        <a href="/" class="logo"><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-8 col-lg-8 col-xl-8 header_menu">
                         <span class="activee"><a class="fontLatoRegular" href="/">Who we are?</a></span>
@@ -98,18 +98,18 @@
         <div class="container" style="padding: 0;">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 brands" style="padding: 0;">
                 <div class="branding_list">
-                    <img class="brands_logos img1" src="./images/Benz.svg" style="width: 150px">
-                    <img class="brands_logos img2" src="./images/Emtax.svg" style="width: 124px;">
-                    <img class="brands_logos img3" src="./images/Zibahub.svg" style="width: 80px;">
-                    <img class="brands_logos img4" src="./images/pyt-logo.svg" style="width: 160px">
-                    <img class="brands_logos img5" src="./images/Pinecrow.svg" style="width: 140px;">
+                    <img alt="Benz" class="brands_logos img1" src="./images/Benz.svg" style="width: 150px">
+                    <img alt="Emtax" class="brands_logos img2" src="./images/Emtax.svg" style="width: 124px;">
+                    <img alt="Zibahub" class="brands_logos img3" src="./images/Zibahub.svg" style="width: 80px;">
+                    <img alt="pyt-logo" class="brands_logos img4" src="./images/pyt-logo.svg" style="width: 160px">
+                    <img alt="Pinecrow" class="brands_logos img5" src="./images/Pinecrow.svg" style="width: 140px;">
                 </div>   
                 <marquee behavior="scroll" direction="left" scrollamount="3" style="display: none;">
-                    <img class="brands_logos" src="./images/Benz.svg" style="width: 150px">
-                    <img class="brands_logos" src="./images/Emtax.svg" style="width: 124px;">
-                    <img class="brands_logos" src="./images/Zibahub.svg" style="width: 80px;">
-                    <img class="brands_logos" src="./images/pyt-logo.svg" style="width: 160px">
-                    <img class="brands_logos" src="./images/Pinecrow.svg" style="width: 140px;">
+                    <img alt="Benz" class="brands_logos" src="./images/Benz.svg" style="width: 150px">
+                    <img alt="Emtax" class="brands_logos" src="./images/Emtax.svg" style="width: 124px;">
+                    <img alt="Zibahub" class="brands_logos" src="./images/Zibahub.svg" style="width: 80px;">
+                    <img alt="pyt-logo" class="brands_logos" src="./images/pyt-logo.svg" style="width: 160px">
+                    <img alt="Pinecrow" class="brands_logos" src="./images/Pinecrow.svg" style="width: 140px;">
                 </marquee>
             </div>
         </div>
