--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <p style="margin-bottom: 0;">Bring your <br /> Product Idea to Life</p>
             </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
-                <img src="./images/Border-02.svg" class="Line-1" />
+                <img alt="Border" src="./images/Border-02.svg" class="Line-1" />
             </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner_text_2 fontLatoRegular">
                 <p>
@@ -122,7 +122,7 @@
                 <h1 class="fontGraphikSemibold">
                     Who you are?
                 </h1>
-                <img src="./images/line-2.png" />
+                <img alt="line 2" src="./images/line-2.png" />
                 <!-- <p class="banner--text fontLatoRegular">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit illum aperiam.<br /> ea exercitationem .
                 </p> -->
@@ -134,7 +134,7 @@
                             <div class="card--body">
                                 <span class="fa_icons Oval_idea">
                                     <!-- <i class="fa fa_icon fa-lightbulb-o" aria-hidden="true"></i> -->
-                                    <img src="./images/light-bulb.svg"/>
+                                    <img alt="light-bulb" src="./images/light-bulb.svg"/>
                                 </span>
                                 <h2 class="card--head fontGraphikSemibold" style="color: #000000;">An aspiring<br/> entrepreneur?</h2>
                                 <p class="card--text fontLatoRegular">
@@ -149,7 +149,7 @@
                             <div class="card--body">
                                 <span class="fa_icons Oval_product">
                                     <!-- <i class="fa fa_icon fa-lightbulb-o" aria-hidden="true"></i> -->
-                                    <img src="./images/send-mail.svg"/>
+                                    <img alt="send-mail" src="./images/send-mail.svg"/>
                                 </span>
                                 <h2 class="card--head fontGraphikSemibold" style="color: #000000;">A startup<br/> owner?</h2>
                                 <p class="card--text fontLatoRegular">
@@ -164,7 +164,7 @@
                             <div class="card--body">
                                 <span class="fa_icons Oval_build">
                                     <!-- <i class="fa fa_icon fa-lightbulb-o" aria-hidden="true"></i> -->
-                                    <img src="./images/building-front.svg"/>
+                                    <img alt="building-front" src="./images/building-front.svg"/>
                                 </span>
                                 <h2 class="card--head fontGraphikSemibold" style="color: #000000;">An established<br/> enterprise?</h2>
                                 <p class="card--text fontLatoRegular">
@@ -187,7 +187,7 @@
                     <h1 class="fontGraphikSemibold">
                         Why us?
                     </h1>
-                    <img src="./images/line-3.png" />
+                    <img alt="line-3" src="./images/line-3.png" />
                     <p class="banner--text fontLatoRegular">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod <br/>
                         tempor incididunt .
@@ -199,14 +199,14 @@
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="fa_icon" style="background-color: #002ee5;">
-                                <img src="./images/monitor.svg" />
+                                <img alt="monitor" src="./images/monitor.svg" />
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <h1 class="fontGraphikSemibold">Human-centered design, for products your customers love</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <img src="./images/line-left.png" />
+                        <img alt="line-left" src="./images/line-left.png" />
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
@@ -219,7 +219,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="img_section " style="margin: auto;">
-                            <img src="./images/(A)-Products-Customer-Love.png" />
+                            <img alt="Products Customer Love" src="./images/(A)-Products-Customer-Love.png" />
                         </div>
                     </div>
                 </div>
@@ -236,14 +236,14 @@
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="fa_icon">
-                                <img src="./images/setting.svg" />
+                                <img alt="setting" src="./images/setting.svg" />
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <h1 class="fontGraphikSemibold">World-class products, built with modern engineering</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                             <img src="./images/line-left.png" />
+                             <img alt="line-left" src="./images/line-left.png" />
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
@@ -268,14 +268,14 @@
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="fa_icon" style="background-color: #ff2695;">
-                                <img src="./images/startup.svg" />
+                                <img alt="startup" src="./images/startup.svg" />
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <h1 class="fontGraphikSemibold">Launch early, reach your customers first</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                                <img src="./images/line-left.png" />
+                                <img alt="line-lef" src="./images/line-left.png" />
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
@@ -290,7 +290,7 @@
                         <!-- <div class="img_section" style="margin: auto;">
                         </div> -->
                         <div class="img_section" style="margin: auto;">
-                                <img src="./images/(C)-Early-Launch.png" />
+                                <img alt="Early Launch" src="./images/(C)-Early-Launch.png" />
                         </div>
                     </div>
                 </div>
@@ -307,14 +307,14 @@
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="fa_icon" style="background-color: #00d890;">
-                                <img src="./images/group-6.svg" />
+                                <img alt="group 6" src="./images/group-6.svg" />
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <h1 class="fontGraphikSemibold">And finally, no pricing surprises.</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                                <img src="./images/line-left.png" />
+                                <img alt="line-left" src="./images/line-left.png" />
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
@@ -327,7 +327,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/(D)-Our-Pricing.png" />
+                            <img alt="Our Pricing" src="./images/(D)-Our-Pricing.png" />
                         </div>
                     </div>
                 </div>
@@ -354,7 +354,7 @@
                         <div class="card__body">
                             <!-- <i class="fa fa_icon fa-archive" aria-hidden="true"></i> -->
                             <span class="fa_icon Oval_code">
-                                <img src="./images/code.svg" />
+                                <img alt="code" src="./images/code.svg" />
                             </span>
                             <p class="card-title fontGraphikSemibold">Clean Code</p>
                             <p class="card-text fontLatoRegular">
@@ -368,7 +368,7 @@
                     <div class="card">
                         <div class="card__body">
                             <span class="fa_icon Oval_pro">
-                                <img src="./images/programming.svg" />
+                                <img alt="programming" src="./images/programming.svg" />
                             </span>
                             <p class="card-title fontGraphikSemibold">Tets driven Development</p>
                             <p class="card-text fontLatoRegular">
@@ -382,7 +382,7 @@
                     <div class="card">
                         <div class="card__body">
                             <span class="fa_icon Oval_flash">
-                                <img src="./images/shape.svg" />
+                                <img alt="shape" src="./images/shape.svg" />
                             </span>
                             <p class="card-title fontGraphikSemibold">Agile</p>
                             <p class="card-text fontLatoRegular">
@@ -395,7 +395,7 @@
                     <div class="card">
                         <div class="card__body">
                             <span class="fa_icon Oval_crown">
-                                <img src="./images/crown-4.svg" />
+                                <img alt="crown-4" src="./images/crown-4.svg" />
                             </span>
                             <p class="card-title fontGraphikSemibold">Ownership</p>
                             <p class="card-text fontLatoRegular">
@@ -408,7 +408,7 @@
                     <div class="card">
                         <div class="card__body">
                             <span class="fa_icon Oval_group_join">
-                                <img src="./images/group_jon.svg" />
+                                <img alt="group_jon" src="./images/group_jon.svg" />
                             </span>
                             <p class="card-title fontGraphikSemibold">Collaboration</p>
                             <p class="card-text fontLatoRegular">
@@ -421,7 +421,7 @@
                         <div class="card">
                             <div class="card__body">
                                 <span class="fa_icon Oval_group_join">
-                                    <img src="./images/group_jon.svg" />
+                                    <img alt="group_jon" src="./images/group_jon.svg" />
                                 </span>
                                 <p class="card-title fontGraphikSemibold">Collaboration</p>
                                 <p class="card-text fontLatoRegular">
@@ -451,9 +451,9 @@
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 images_ceo_mobile" style="display: none;padding: 0;">
                         <div class="row row_mobile" style="margin: 0px 0px 0px auto;">
                             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="padding: 0;">
-                                <img src="./images/path-6.svg" style="position: absolute;width: 175px;top: 0;" />
-                                <img src="./images/ceo.png" data-aos="zoom-in" data-aos-duration="10000" data-aos-easing="linear" style="padding: 10px;"/>
-                                <img src="./images/path-6-copy.svg" style="position: absolute; width: 76px; bottom: 0; right: 0;"/>
+                                <img alt="path-6.svg" src="./images/path-6.svg" style="position: absolute;width: 175px;top: 0;" />
+                                <img alt="ceo.png" src="./images/ceo.png" data-aos="zoom-in" data-aos-duration="10000" data-aos-easing="linear" style="padding: 10px;"/>
+                                <img alt="path-6-copy" src="./images/path-6-copy.svg" style="position: absolute; width: 76px; bottom: 0; right: 0;"/>
                             </div>
                         </div>
                     </div>
@@ -487,8 +487,8 @@
     <!-- end -->
     <!-- next_billion -->
     <section class="next_billion">
-        <img data-aos="zoom-out-left" data-aos-duration="3000" src="./images/oval.png" class="ovel" />
-        <img data-aos="zoom-out-left" data-aos-duration="5000" src="./images/oval-copy-6.png" class="ovel-6" />
+        <img data-aos="zoom-out-left" data-aos-duration="3000" alt="oval" src="./images/oval.png" class="ovel" />
+        <img data-aos="zoom-out-left" data-aos-duration="5000" alt="oval-copy" src="./images/oval-copy-6.png" class="ovel-6" />
         <div class="container billion">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
                 <button class="button fontLatoRegular">Let's get serious &nbsp <span> </span></button>
@@ -504,8 +504,8 @@
                     </span></button>
             </div>
         </div>
-        <img data-aos="zoom-in-up" data-aos-duration="5000" src="./images/path-3-copy.png" class="path-3" />
-        <img data-aos="zoom-out-right" data-aos-duration="3000" src="./images/path-3.png" class="path" />
+        <img data-aos="zoom-in-up" data-aos-duration="5000" alt="path-3-copy" src="./images/path-3-copy.png" class="path-3" />
+        <img data-aos="zoom-out-right" data-aos-duration="3000" alt="path-3" src="./images/path-3.png" class="path" />
     </section>
     <!-- end -->
     <!-- main footer -->
