change in img tags

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/(B)-Modern-Engineering.png" />
+                            <img alt="Modern-Engineering" src="./images/(B)-Modern-Engineering.png" />
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
@@ -343,7 +343,7 @@
                 <h1 class="fontGraphikSemibold">
                     Our secrets.
                 </h1>
-                <img src="./images/line-3.png" />
+                <img alt="line-3" src="./images/line-3.png" />
                 <p class="banner--text fontLatoRegular">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br /> tempor incididunt .
                 </p>
@@ -468,7 +468,7 @@
                                     style="font-size: 2.5rem;font-weight: 700;">&rdquo;</span>
                             </blockquote>
                             <p class="fontGraphikSemibold name_of_writer">- John Snow, Co-Founder</p>
-                            <img src="./images/circle.png" />
+                            <img alt="circle" src="./images/circle.png" />
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 images_ceo" style="padding: 0;display: flex;">
@@ -513,7 +513,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 logo_address">
-                    <img src="./images/logo-crayond@2x.jpg" width="115px" />
+                    <img alt="crayond@2x" src="./images/logo-crayond@2x.jpg" width="115px" />
                     <p class="fontGraphikRegular">© Crayon Digital Reach Pvt. Ltd.</p>
                     <p class="fontGraphikRegular">All rights reserved</p>
                 </div>
