--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/(B)-Modern-Engineering.png" />
+                            <img alt="Modern Engineering" src="./images/(B)-Modern-Engineering.png" />
                         </div>
                     </div>
                 </div>
