--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
 <script src="./plugin/jquery.min.js"></script>
 
 <script src="./plugin/bootstrap.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
 <script src="./plugin/aos.js"></script>
 <script type="text/javascript">
     AOS.init();
@@ -673,6 +673,7 @@
         
         lastScrollTop = st;
     }
+    
 </script>
 
 </html>
