--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="Description" content="Author: Crayon’d,Bring your Product Idea to Life">
     <meta name="theme-color" content="#334ac0">
     <title>Crayon'd</title>
 
