meta tag changes

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="Description" content="Author: Crayon’d,Bring your Product Idea to Life">
+    <meta name="author" content="Crayon'd">
+    <meta name="Description" content="Crayon'd helps startups and enterprises launch their ideas and dreams into products and grow">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#334ac0">
     <title>Crayon'd</title>
 
@@ -622,9 +624,7 @@
 
 </body>
 <script src="./plugin/jquery.min.js"></script>
-
 <script src="./plugin/bootstrap.min.js"></script>
-<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
 <script src="./plugin/aos.js"></script>
 <script type="text/javascript">
     AOS.init();
